--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <input type="text" class="input" placeholder="Enter Domain Name Here..." />
+    <div class="input-group">
+      <span class="icon-container">
+        <svg class="icon">
+          <use xlink:href="images/sprite.svg#wordpress"></use>
+        </svg>
+      </span>
+      <input
+        type="text"
+        class="input"
+        placeholder="Enter Domain Name Here..."
+      />
+      <button class="btn btn--accent">Search</button>
+    </div>
   </body>
 </html>
