--- a/index.html
+++ b/index.html
@@ -14,5 +14,20 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="media">
+      <div class="media__image">
+        <svg class="icon">
+          <use xlink:href="images/sprite.svg#snap"></use>
+        </svg>
+      </div>
+      <div class="media__body">
+        <h3 class="media__title">Easy Start & Managed Updates</h3>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem,
+          perspiciatis deleniti illum nemo officia natus.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
