--- a/index.html
+++ b/index.html
@@ -15,19 +15,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <div class="media">
-      <div class="media__image">
-        <svg class="icon">
-          <use xlink:href="images/sprite.svg#snap"></use>
-        </svg>
-      </div>
-      <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates</h3>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem,
-          perspiciatis deleniti illum nemo officia natus.
-        </p>
-      </div>
-    </div>
+    <blockquote class="quote">
+      <p class="quote__text">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, est
+        beatae sunt dolorem consequatur deserunt.
+      </p>
+      <footer></footer>
+    </blockquote>
   </body>
 </html>
