inclusion of quote template

--- a/index.html
+++ b/index.html
@@ -14,13 +14,5 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <blockquote class="quote">
-      <p class="quote__text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, est
-        beatae sunt dolorem consequatur deserunt.
-      </p>
-      <footer></footer>
-    </blockquote>
-  </body>
+  <body></body>
 </html>
