addition of script

--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         <li class="nav__item"><a href="#">Domain</a></li>
         <li class="nav__item"><a href="#">Pricing</a></li>
     </nav>
+    <script src="components/js/main.js"></script>
   </body>
 </html>
