--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <section class="block container">
+      <header class="block__header">
+        <h2>Starting at $9 per month</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis,
+          porro!
+        </p>
+      </header>
+      <div class="input-group">
+        <input type="text" class="input" placeholder="Enter domain name here" />
+        <button class="btn btn--accent">Search</button>
+      </div>
+    </section>
     <script src="components/js/main.js"></script>
   </body>
 </html>
