addition of dummy text

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     <header class="block__header">
       <h2>Host on the Cloud to Keep Growing</h2>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique sint
-        harum atque necessitatibus recusandae expedita.
+        Develop your website on the cloud and unlock infinite potential for growth and design
       </p>
     </header>
     <article class="grid grid--1x2 feature">
@@ -68,9 +67,8 @@
         </span>
         <h3 class="feature__heading">Super Easy to Use</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque officiis
-          fuga recusandae esse quaerat nostrum molestiae quos culpa doloremque
-          cumque.
+          Our plans outline website design in a simple and intuitive way. Learn at your own pace and find the design that works for you.
+          
         </p>
         <a href="#" class="link-arrow">Learn More</a>
       </div>
@@ -88,9 +86,7 @@
         </span>
         <h3 class="feature__heading">Simply Designed Websites</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque officiis
-          fuga recusandae esse quaerat nostrum molestiae quos culpa doloremque
-          cumque.
+          Our websites provide the cutting edge and visual appeal that customers love. Keep away from boring and bleak HTML styles of the '90s and update your website style
         </p>
         <a href="#" class="link-arrow">Learn More</a>
       </div>
@@ -108,9 +104,7 @@
         </span>
         <h3 class="feature__heading">Wordpress Made Easy</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque officiis
-          fuga recusandae esse quaerat nostrum molestiae quos culpa doloremque
-          cumque.
+          Combine all of your Wordpress creations into a simple webpage with the click of a button
         </p>
         <a href="#" class="link-arrow">Learn More</a>
       </div>
@@ -124,8 +118,7 @@
     <header class="block__header">
       <h2>Starting at $9 per month</h2>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis,
-        porro!
+        Search for the plan or applications that work best for you!
       </p>
     </header>
     <div class="input-group">
@@ -153,7 +146,7 @@
         <div class="card card--secondary">
           <header class="card__header">
             <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
+            <span class="plan__price">$5</span>
             <span class="plan__billing-cycle">/month</span>
             <span class="badge badge--secondary badge--small">10% Off</span>
             <span class="plan__description">Easy start on the cloud</span>
@@ -163,8 +156,8 @@
               <li class="list__item">Unlimited Websites</li>
               <li class="list__item">Unlimited Bandwidth</li>
               <li class="list__item">100 GB SSD Storage</li>
-              <li class="list__item">3 GB RAM</li>
-              <button class="btn btn--outline btn--block">Button</button>
+              <li class="list__item">1 GB RAM</li>
+              <button class="btn btn--outline btn--block">Buy Now</button>
             </ul>
           </div>
         </div>
@@ -184,7 +177,7 @@
               <li class="list__item">Unlimited Bandwidth</li>
               <li class="list__item">100 GB SSD Storage</li>
               <li class="list__item">3 GB RAM</li>
-              <button class="btn btn--outline btn--block">Button</button>
+              <button class="btn btn--outline btn--block">Buy Now</button>
             </ul>
           </div>
         </div>
@@ -193,7 +186,7 @@
         <div class="card card--secondary">
           <header class="card__header">
             <h3 class="plan__name">Entry</h3>
-            <span class="plan__price">$14</span>
+            <span class="plan__price">$33</span>
             <span class="plan__billing-cycle">/month</span>
             <span class="badge badge--secondary badge--small">10% Off</span>
             <span class="plan__description">Easy start on the cloud</span>
@@ -203,8 +196,8 @@
               <li class="list__item">Unlimited Websites</li>
               <li class="list__item">Unlimited Bandwidth</li>
               <li class="list__item">100 GB SSD Storage</li>
-              <li class="list__item">3 GB RAM</li>
-              <button class="btn btn--outline btn--block">Button</button>
+              <li class="list__item">10 GB RAM</li>
+              <button class="btn btn--outline btn--block">Buy Now</button>
             </ul>
           </div>
         </div>
@@ -232,8 +225,7 @@
             <div class="media__body">
               <h3 class="media__title">Easy Start & Managed Updates</h3>
               <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam ducimus
-                nostrum dolor vero temporibus itaque.
+                Updates are easier than ever to manage, and it's a quick and easy start to your web-building process
               </p>
             </div>
           </div>
@@ -245,11 +237,9 @@
             </svg>
           </div>
           <div class="media__body">
-            <h3 class="media__title">Staging, GIT, and WP-CLI</h3>
+            <h3 class="media__title">Interactive and Revolutionary Design Methods</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam ducimus
-              nostrum dolor vero temporibus itaque.
-            </p>
+              The newest trend in web design and hosting            </p>
           </div>
         </div></li>
         <li><div class="media">
@@ -261,8 +251,7 @@
           <div class="media__body">
             <h3 class="media__title">Staging, GIT, and WP-CLI</h3>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsam ducimus
-              nostrum dolor vero temporibus itaque.
+              Interactive compatibility with GIT and other hosting applications to assist in building your website
             </p>
           </div>
         </div></li>
@@ -281,8 +270,7 @@
       </div>
       <blockquote class="quote">
         <p class="quote__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, est beatae
-          sunt dolorem consequatur deserunt.
+          This is the best hosting service I've ever used! It is well worth the low-cost and will allow you to host beautiful websites.
         </p>
         <footer>
           <div class="media">
@@ -293,7 +281,7 @@
             </div>
             <div class="media__body">
               <h3 class="media__title quote__author">John Smith</h3>
-              <p class="quote__organization">ABC Company</p>
+              <p class="quote__organization">Pennsylvania IT Solutions</p>
             </div>
           </div>
         </footer>
