addition of photograph

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
   <div class="card testimonial" data-aos="zoom-in">
     <div class="grid grid--1x2">
       <div class="testimonial__image">
-        <img src="images/testimonial.jpg" alt="A happy smiling man" />
+        <img src="images/michael.webp" alt="A happy smiling man" />
         <span class="icon-container icon-container--accent">
           <svg class="icon icon--small">
             <use xlink:href="images/sprite.svg#quotes"></use>
